NewArchive/b8e4415769faadb6e08435e8506d6ff9-ffdfec6fd1547b9f867d676f3fc99336/output
+ g++-4.8 -std=c++11 -c -Wall -pedantic main.cpp
main.cpp:4:8: error: parameter pack 'NN1' must be at the end of the template parameter list
 struct append_index_seq;
        ^
